--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                         <p class="premio-principal">
                             ${concurso.acumulou ? 'Ninguém acertou os 7 números' : `Prêmio: ${formatarMoeda(concurso.premios.seteAcertos)}`}
                         </p>
-                    </div><---Teste--->
+                    </div>
                     <!--
                     <div class="premiacoes">
                         <div class="premiacao-item">
